--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <button id=grid-toggle>Toggle Grids</button>
     <div id="myGrid" class="ag-theme-balham" style="height: 100%"></div>
 </body>
 
